2008-04-26  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c (rbclt_actor_apply_transform_to_point):
	Fixed to return the transformed vertex instead of the original
	point.
	(rbclt_actor_apply_relative_transform_to_point): New wrapper for
	clutter_actor_apply_relative_transform_to_point.

2008-04-25  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c (rbclt_actor_abs_opacity): New function.
	(rbclt_actor_actor_id): Rename to actor_gid
	(rbclt_actor_set_scale): Remove gravity parameter.

2008-04-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c: Replaced the individual getters and
	setters for each rotation value with a single {get,set}_rotation
	method.

2008-04-22  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourscale.c (rbclt_behaviour_scale_init):
	Fixed number of arguments required the constructor.

2008-04-22  Neil Roberts  <neil@o-hand.com>

	* .gitignore: Added #*# files

2008-04-22  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourscale.c
	(rbclt_behaviour_scale_initialize): Updated to use a start and and
	end parameter for both the x and y axes.

	* clutter/rbcltevent.c.in (rbclt_event_init): 
	* clutter/mkrbcltevent.rb: Removed CLUTTER_{2,3}BUTTON_PRESS.

	* clutter/extconf.rb: Changed required clutter version to 0.7.

	* .gitignore: Added a .gitignore file

2008-01-11  Neil Roberts  <bpeeluk@yahoo.co.uk>

	* clutter/extconf.rb: Bumped up Clutter version requirement to
	0.5. Removed rbclt{box,layout,padding,margin}.c because Clutter no
	longer defines them.

	* clutter/rbcltmargin.c.in: 
	* clutter/rbcltpadding.c.in: 
	* clutter/rbcltlayout.c: 
	* clutter/rbcltbox.c: 
	Removed

	* clutter/rbclutter.c (Init_clutter): Removed calls to
	rbclt_box_init, rbclt_padding_init, rbclt_margin_init and
	rbclt_layout_init.

	* clutter/rbclteffect.c (rbclt_effect_fade, rbclt_effect_scale):
	Updated to new API which only has the end state.
	(rbclt_effect_depth, rbclt_effect_move, rbclt_effect_do_path):